# sfc-crawler

./: .gitignore  README.md  crawl.sh  pyproject.toml
crawler/: items.py  pipelines.py  settings.py
crawler/spiders/: sfc_firm.py  webb_firm.py
